--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/travelers?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/travelers?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Travelers2Go!
 
 # flyway configuration
-#spring.flyway.enabled=true
-#spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 
-spring.thymeleaf.prefix: file:src/main/resources/templates/
-spring.thymeleaf.cache: false
